# catholic-hierarchy

./: LICENSE  README.md  pyproject.toml
src/vatican_ii/: main.py
